--- a/Analysis II/main.tex
+++ b/Analysis II/main.tex
@@ -586,17 +586,20 @@ $y' + ay = b.$ Here $a, b$ are constant functions.
   The Taylor polynomial of $f$ at $x_0$
   of order $1$ is
   \begin{align*}
-    T_1 f(y; x_0) := f(x_0) + \nabla f(x_0) \cdot y
+    T_1(\vec{x_0}, \vec{y_0} &:= f(\vec{x_0}) + \langle\nabla f(\vec{x_0}), \vec{y}\rangle \\
+    \vec{y}& = \vec{x} - \vec{x_0} \\
+    \vec{x_0} &= (x_0, y_0) \\
+    \vec{x} &= (x, y)
   \end{align*}
-  while the first order approximation of
-  $f$ at $x_0$ is
-  \begin{align*}
-    T_1 f(x - x_0; x_0) := f(x_0) + \nabla f(x_0) \cdot (x - x_0)
-  \end{align*}
+  %while the first order approximation of
+  %$f$ at $x_0$ is
+  %\begin{align*}
+    %T_1 f(x - x_0; x_0) := f(x_0) + \nabla f(x_0) \cdot (x - x_0)
+  %\end{align*}
   and the second order
   \begin{align*}
-    T_2 f(y; x_0) := f(x_0) + \nabla f(x_0) \cdot (x - x_0) \\
-    + \frac{1}{2} \cdot (x - x_0)^t \cdot \text{Hess}_f(x_0) \cdot (x - x_0)
+    T_2 (\vec{x_0}, \vec{y_0}) :=  f(\vec{x_0}) + \langle\nabla f(\vec{x_0}), \vec{y}\rangle \\
+    + \frac{1}{2}\vec{y} \cdot \text{Hess}_f(\vec{x_0}) \cdot \vec{y}^t
   \end{align*}
   Finally, the general form is
   \begin{align*}
@@ -608,6 +611,35 @@ $y' + ay = b.$ Here $a, b$ are constant functions.
     f(x)             & = T_k(x - x_0; x_0) + E_k(f, x, x_0)           \\
     \lim_{x \ra x_0} & \frac{E_k(f, x, x_0)}{\norm*{x - x_0}^k} \ra 0
   \end{align*}
+\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black]
+\subsubsection{Example}
+Consider the following function:
+$$ f(x, y) := e^{x^2 + y^2} + log(1 + x^2) + \arctan(xy)$$
+$a)$ determine the Taylor plynomial of $f$ at $(0, 0)$ up to and including third order.
+$$\frac{\partial f(x,y)}{\partial x} = 2xe^{x^2 + y^2} + \frac{2x}{1 + x^2} + \frac{y}{1 + x^2y^2}$$
+$$\frac{\partial f(x,y)}{\partial y} = 2ye^{x^2 + y^2} + \frac{x}{1 + x^2y^2}$$
+Direct substitution gives us:
+$$ df(0, 0) = (0, 0)$$
+We now calculate the partial derivatives of second order:
+$$\frac{\partial^2 f(x,y)}{\partial x^2} = 2e^{x^2+y^2} + 4x^2e^{x^2+y^2} + \frac{2(1 + x^2) - 4x^2}{(1 + x^2)^2} - \frac{2xy^3}{(1 + x^2y^2)^2}$$
+$$\frac{\partial^2 f(x,y)}{\partial x \partial y} = 4xye^{x^2+y^2} + \frac{1 + x^2y^2 - 2x^2y^2}{(1 + x^2y^2)^2}$$
+$$\frac{\partial^2 f(x,y)}{\partial y^2} = 2e^{x^2+y^2} + 4y^2e^{x^2+y^2} - \frac{2x^3y}{(1 + x^2y^2)^2}$$
+We need the hessian so we have:
+$$Hess_f(0, 0) =
+  \left[ {\begin{array}{cc}
+    4 & 1\\
+    1 & 2\\
+  \end{array} } \right]$$
+We now calculate the partial derivatives of third order. Luckily they all vanish so we have:
+  \begin{align*}
+T_3f((0,0); (x,y)) &= f(0,0) + \frac{\partial f(0,0)}{\partial x}x + \frac{\partial f(0,0)}{\partial y}y  \\
+&+\frac{1}{2} \frac{\partial^2 f(0,0)}{\partial x^2}x^2 + \frac{\partial^2 f(0,0)}{\partial x \partial y}xy \\
+&+ \frac{1}{2} \frac{\partial^2 f(0,0)}{\partial y^2}y^2 + \frac{1}{6} \frac{\partial^3 f(0,0)}{\partial x^3}x^3 \\
+&+ \frac{1}{2} \frac{\partial^3 f(0,0)}{\partial x^2\partial y}x^2y \\
+&+\frac{1}{2} \frac{\partial^3 f(0,0)}{\partial x \partial y^2}xy^2 + \frac{1}{6} \frac{\partial^3 f(0,0)}{\partial y^3}y^3 \\
+&= 1 + 2x^2 + xy + y^2
+\end{align*}
+\end{tcolorbox}
   % ---------- Local max/min -------------------
   \subsection{Local max/min}
   Let $f: \X \subset \R^n \ra \R$ be differentiable. We say $x_0 \in \X$
